# roketo-ui

./: .babelrc  .env  .env.development  .env.local.example  .env.mainnet  .env.production  .env.testnet  .eslintignore  .eslintrc  .gitignore  .lintstagedrc  .prettierrc  Cargo.toml  LICENSE  README.md  build.sh  check-testIds.ts  craco.config.js  cypress.json  get-dotenv.js  index.html  package-lock.json  package.json  playwright.config.ts  styleguide.config.js  tailwind.config.js  test.sh  testAccount.json  tsconfig.json  tsconfig.paths.json  vite.config.js
contract/: .gitignore  API.md  Cargo.toml  README.md  SHA.md  build.sh  compile_and_test.sh
contract/init/: index.js  package.json  roketo.js  utils.js  xyiming.js
contract/res/: roketo.wasm  xyiming.wasm
contract/src/: account.rs  aurora.rs  bridge.rs  calls.rs  cron.rs  dao.rs  err.rs  lib.rs  primitives.rs  stats.rs  stream.rs  stream_ops.rs  token.rs  views.rs
contract/src/interface/: account_calls.rs  dao_calls.rs  exchanger_calls.rs  mod.rs  stream_calls.rs  token_calls.rs  views.rs
contract/src/unit_tests/: mod.rs  primitives.rs  stream.rs  stream_ops.rs  token.rs
contract/src/web4/: index.html  mod.rs  src_list.html
contract/tests/: general.rs
frontend/: .env.development  .env.mainnet  .env.production  .eslintrc  CHANGELOG.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
public/: index.html  site.webmanifest
res/: aurora.wasm  fungible_token.wasm  nft_roketo.wasm  roketo.wasm
src/: env.d.ts  index.tsx  polyfill.ts
tests/: addfunds.spec.ts  general.rs  (+7 more)
(+730 files in other folders)
