[package]
name = "xyiming"
version = "0.1.0"
authors = ["Kikimora Labs <kpr@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "=3.2.0"
near-sdk = "=3.1.0"

[dev-dependencies]
near-sdk-sim = "=3.1.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
